updated query and snpeff function

--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -64,42 +64,6 @@
      "metadata": {},
      "level": 2,
      "source": [
-      "Finding rare variants with Kaviar"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "To reduce the number of variants input into downstream queries and analysis, all trio variants were annotated with kaviar frequencies, Keep only variants with a kaviar frequency less than .01, or variants not listed in the kaviar table.  \n",
-      "\n",
-      "         WITH bv AS (\n",
-      "             SELECT bv.sample_id, bv.chr, bv.pos, bv.id, bv.ref, bv.alt, bv.qual, bv.filter, bv.gt\n",
-      "             FROM p7_platform.brady_variant bv\n",
-      "             WHERE (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%02' OR bv.sample_id LIKE '%01')\n",
-      "          )\n",
-      "  \n",
-      "          SELECT bv.*, k.alle_freq\n",
-      "          FROM bv\n",
-      "          LEFT JOIN /* +SHUFFLE */ public_hg19.kaviar k\n",
-      "               ON bv.chr = k.chromosome\n",
-      "               AND bv.pos = k.pos\n",
-      "               AND bv.ref = k.ref\n",
-      "               AND bv.alt = k.alt\n",
-      "         WHERE (k.alle_freq < .01 OR k.alle_freq IS NULL)\n",
-      "\n",
-      "Query Statements:   \n",
-      "- Queries were limited to trio members, excluding more distant relatives  \n",
-      "- Keep only variants with a kaviar frequency less than .01, or variants not listed in the kaviar table. \n",
-      "\n",
-      "Results were saved to an hdfs table named bv_kaviar. "
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "metadata": {},
-     "level": 2,
-     "source": [
       "Adding positional information to the NBS gene list"
      ]
     },
@@ -111,13 +75,13 @@
       "ensembl_genes table using gene name. This resulted in mulitple listings per gene for each exon, \n",
       "allowing for more precise matches. \n",
       "\n",
-      "        CREATE TABLE users_selasady.nbs_positional AS SELECT nbs.gene, \n",
-      "        nbs.entrez_gene_id as entrez_id, ens.gene_id AS ensembl_id, ens.chromosome as chrom, \n",
-      "        ens.start, ens.stop, nbs.condition, nbs.omim_phenotype, nbs.va_name, nbs.inheritance, \n",
-      "        nbs.allelic_condition, nbs.in_pgb, nbs.level, ens.feature, ens.transcript_name, \n",
-      "        ens.transcript_id, ens.exon_number, ens.exon_id, ens.gene_biotype, nbs.comments\n",
-      "        FROM users_selasady.nbs_genes nbs\n",
-      "        LEFT JOIN\n",
+      "        CREATE TABLE users_selasady.nbs_positional AS \n",
+      "            SELECT nbs.gene, nbs.entrez_gene_id as entrez_id, ens.gene_id AS ensembl_id, \n",
+      "                ens.chromosome as chrom, ens.start, ens.stop, nbs.condition, nbs.omim_phenotype, \n",
+      "                nbs.va_name, nbs.inheritance, nbs.allelic_condition, nbs.in_pgb, nbs.level, ens.feature, \n",
+      "                ens.transcript_name, ens.transcript_id, ens.exon_number, ens.exon_id, ens.gene_biotype, nbs.comments\n",
+      "            FROM users_selasady.nbs_genes nbs\n",
+      "            LEFT JOIN\n",
       "                 public_hg19.ensembl_genes ens\n",
       "                ON nbs.gene = ens.gene_name\n",
       "\n",
@@ -129,76 +93,94 @@
      "metadata": {},
      "level": 2,
      "source": [
-      "Locate rare variants in the NBS gene list"
+      "Finding rare variants with Kaviar"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Next the Kaviar-filtered variants were joined with nbs _ ensembl using chromosome, start and stop positions, returning rare variants in the nbs_gene list, and annotated those with ClinVar. \n",
-      "\n",
-      "\n",
-      "        CREATE TABLE users_selasady.nbs_annot AS \n",
-      "            WITH nbs AS (\n",
-      "            SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id as rs_id, bv.ref, bv.alt, bv.qual, bv.filter,bv.gt, \n",
-      "            bv.alle_freq AS kav_freq,nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, nbs.omim_phenotype, \n",
-      "            nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, nbs.level, nbs.feature, \n",
-      "            nbs.transcript_name, nbs.transcript_id, nbs.exon_number, nbs.exon_id, nbs.gene_biotype, nbs.comments\n",
-      "            FROM public_hg19.bv_kaviar bv, users_selasady.nbs_ensembl nbs\n",
-      "            WHERE bv.chr = nbs.chrom\n",
-      "            AND bv.pos BETWEEN nbs.start and nbs.stop\n",
-      "            )\n",
-      "  \n",
-      "           SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n",
-      "           CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n",
-      "                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n",
-      "           ELSE 'N'\n",
-      "           END AS clin_patho\n",
-      "           FROM nbs\n",
-      "           LEFT JOIN public_hg19.clinvar clin\n",
-      "               ON nbs.rs_id = clin.id\n",
-      "\n",
-      "6927 rows were returned, the table was saved as users _ selasady.nbs_annot. "
+      "For all trio members in the family's listed above, variants were filtered using Kaviar to retain only variants with a Kaviar frequency of less than .01, or variants not listed in Kaviar at all. The rare variants were then joined with the nbs_ensembl table to locate rare variants falling in NBS gene regions.  "
      ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "WITH bv as (\n",
+      "SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n",
+      "    bv.alt, bv.qual, bv.filter, bv.gt, k.alle_freq\n",
+      "    FROM p7_platform.brady_variant bv\n",
+      "    LEFT JOIN /* +SHUFFLE */ public_hg19.kaviar k\n",
+      "         ON bv.chr = k.chromosome\n",
+      "         AND bv.pos = k.pos\n",
+      "         AND bv.ref = k.ref\n",
+      "         AND bv.alt = k.alt\n",
+      "  WHERE (k.alle_freq < .01 OR k.alle_freq IS NULL)\n",
+      "  AND (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%02' OR bv.sample_id LIKE '%01')\n",
+      "  )\n",
+      "  \n",
+      "SELECT bv.*, nbs.gene, nbs.entrez_id, nbs.ensembl_id, nbs.condition, \n",
+      "    nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n",
+      "    nbs.level, nbs.feature, nbs.transcript_name, nbs.transcript_id, nbs.exon_number, \n",
+      "    nbs.exon_id, nbs.gene_biotype, nbs.comments          \n",
+      "FROM bv, users_selasady.nbs_ensembl nbs\n",
+      "     WHERE bv.chrom = nbs.chrom\n",
+      "     AND bv.pos BETWEEN nbs.start and nbs.stop"
+     ],
+     "language": "python"
     },
     {
      "cell_type": "heading",
      "metadata": {},
      "level": 2,
      "source": [
-      "Adding DANN scores "
+      "Annotating with ClinVar and DANN scores "
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Rare variants were annotated with the ClinVar table using rsID, when available. Variants with a ClinVar significance rating of 4 or 5, but never 2 or 3, were marked with a 'Y' in the clin_patho column to denote non-conflicted pathogenically significant ratings.\n",
+      "\n",
       "DANN scores whole-genome variants by training a deep neural network (DNN). DNNs can capture non-linear relationships among features, and are better suited than SVMs for problems with a large number of samples and features. DANN scores have been shown to outperform both CADD and FATHMM (http://www.enlis.com/blog/2015/03/17/the-best-variant-prediction-method-that-no-one-is-using/).\n",
       "\n",
       "DANN scores are provided for SNV's and range between 0 and 1. The closer a score is to 1, the more pathogenic the variant. \n",
       "\n",
       "The following query was used to annotate the nbs variants with DANN scores by matching on chromosome and position, then outputting the score for the alt allele. \n",
       "\n",
-      "        CREATE TABLE users_selasady.nbs_dann AS (\n",
-      "            SELECT n.*, CASE \n",
-      "                        WHEN n.alt = 'A' THEN d.score_a\n",
-      "                        WHEN n.alt = 'T' THEN d.score_t\n",
-      "                        WHEN n.alt = 'G' THEN d.score_g\n",
-      "                        WHEN n.alt = 'C' THEN d.score_c\n",
-      "                    END as dann_score, \n",
-      "                    CASE\n",
-      "                        WHEN SUBSTRING(n.sample_id, -2) = '01'THEN 'M'\n",
-      "                        WHEN SUBSTRING(n.sample_id, -2) = '02' THEN 'F'\n",
-      "                        WHEN SUBSTRING(n.sample_id, -2) = '03'THEN 'NB'\n",
-      "                    END as member,\n",
-      "                    SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3)) as family_id,\n",
-      "                   CONCAT(n.chrom, ':', CAST(n.pos AS STRING), ':', n.ref, ':', n.alt, ':', SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3))) as var_id\n",
-      "                   FROM users_selasady.nbs_annot n\n",
-      "                   LEFT JOIN public_hg19.DANN d\n",
-      "                       ON n.chrom = d.chrom\n",
-      "                       AND n.pos = d.pos\n",
-      "              )"
+      "        WITH n as (\n",
+      "            SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n",
+      "                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2 (replace this text with a dollar sign)'  \n",
+      "                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n",
+      "                    ELSE 'N'\n",
+      "                END AS clin_patho\n",
+      "            FROM users_selasady.nbs_kav_genes nbs\n",
+      "            LEFT JOIN public_hg19.clinvar clin\n",
+      "                ON nbs.id = clin.id\n",
+      "         )\n",
+      "        SELECT n.*, \n",
+      "            CASE WHEN n.alt = 'A' THEN d.score_a\n",
+      "                WHEN n.alt = 'T' THEN d.score_t\n",
+      "                WHEN n.alt = 'G' THEN d.score_g\n",
+      "                WHEN n.alt = 'C' THEN d.score_c\n",
+      "             END as dann_score, \n",
+      "             CASE\n",
+      "                 WHEN SUBSTRING(n.sample_id, -2) = '01'THEN 'M'\n",
+      "                 WHEN SUBSTRING(n.sample_id, -2) = '02' THEN 'F'\n",
+      "                 WHEN SUBSTRING(n.sample_id, -2) = '03'THEN 'NB'\n",
+      "             END as member,\n",
+      "             SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3)) as family_id,\n",
+      "             CONCAT(n.chrom, ':', CAST(n.pos AS STRING), ':', n.ref, ':', n.alt, ':', SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3))) as var_id\n",
+      "        FROM n\n",
+      "        LEFT JOIN public_hg19.DANN d\n",
+      "            ON n.chrom = d.chrom\n",
+      "            AND n.pos = d.pos\n",
+      "\n",
+      "This table was saves as users _ selasady.nbs _ annotated with 6,927 rows. "
      ]
     },
     {
@@ -228,7 +210,7 @@
       "\n",
       "# query to left join nbs_annotated variants with DANN scores\n",
       "query = \"\"\"\n",
-      "    SELECT * FROM users_selasady.nbs_dann\n",
+      "    SELECT * FROM users_selasady.nbs_annotated\n",
       "    \"\"\"\n",
       "# run query on impala\n",
       "cur.execute(query)\n",
@@ -237,7 +219,7 @@
       "nbs_df = as_pandas(cur)"
      ],
      "language": "python",
-     "prompt_number": 167
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -283,7 +265,7 @@
       "import pandas as pd\n",
       "\n",
       "# enter path to your snpeff jar\n",
-      "snpeff_path = '/Users/selasady/tools/snpEff/snpEff.jar'\n",
+      "snpeff_path = '/Users/summerrae/tools/snpEff/snpEff.jar'\n",
       "\n",
       "# enter basename for output files\n",
       "out_name = 'nbs_genes'\n",
@@ -294,23 +276,21 @@
       "snpeff_outname = '{}/{}_snpeff'.format(os.getcwd(), out_name)\n",
       "\n",
       "# function to add functional annotation\n",
-      "# def df_to_snpeff(input_df):\n",
-      "#     # subset columns to output to vcf file\n",
-      "#     df = input_df[['chrom', 'pos', 'ref', 'alt']]\n",
-      "#     # write to file for conversion to vcf\n",
-      "#     df.to_csv(tsv_outname, header=True, encoding='utf-8', sep=\"\\t\", index=False)\n",
-      "#     # command to run tab2vcf and then snpeff\n",
-      "#     run_cmd = './tab2vcf.py ' + tsv_outname + ' && java -Xmx4g -jar {} -v GRCh37.75 {} > {}'.format(snpeff_path, vcf_outname, snpeff_outname)\n",
-      "#     # run tab2vcf and upon success, run snpeff\n",
-      "#     snpeff_process = subp.Popen(run_cmd, shell=True)\n",
-      "#     snpeff_output = snpeff_process.communicate()[0]\n",
-      "#     if snpeff_output != 0:\n",
-      "#         print ('SnpEff failed {} {}'.format(snpeff_output.returncode, snpeff_output))\n",
-      "#     else: \n",
-      "#         print \"SnpEff finished. Output saved to {}\".format(snpeff_outname)\n",
-      "# \n",
-      "# # run function on dataframe\n",
-      "# df_to_snpeff(nbs_df)\n",
+      "def df_to_snpeff(input_df):\n",
+      "    # subset columns to output to vcf file\n",
+      "    df = input_df[['chrom', 'pos', 'ref', 'alt']]\n",
+      "    # write to file for conversion to vcf\n",
+      "    df.to_csv(tsv_outname, header=True, encoding='utf-8', sep=\"\\t\", index=False)\n",
+      "    # command to run tab2vcf and then snpeff\n",
+      "    run_cmd = './tab2vcf.py ' + tsv_outname + ' && java -Xmx4g -jar {} -v GRCh37.75 {} > {}'.format(snpeff_path, vcf_outname, snpeff_outname)\n",
+      "    # run tab2vcf and upon success, run snpeff\n",
+      "    snpeff_process = subp.Popen(run_cmd, shell=True)\n",
+      "    snpeff_process.communicate()[0]\n",
+      "\n",
+      "# run function on dataframe\n",
+      "try :\n",
+      "    df_to_snpeff(nbs_df)\n",
+      "except Exception,e: print str(e)\n",
       " \n",
       "# add snpeff annotations back to dataframe\n",
       "def parse_snpeff(input_df):\n",
@@ -341,7 +321,7 @@
       "nbs_annot['pathogenic'] = (nbs_annot['impact'] == 'HIGH') |  (nbs_annot['clin_patho'] == 'Y')"
      ],
      "language": "python",
-     "prompt_number": 170
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -361,7 +341,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Number of newborn variants: 2369, Number of pathogenic: 120\nNumber of mother variants: 2358, Number of pathogenic: 108\nNumber of father variants: 2200, Number of pathogenic: 156\n"
+        "Number of newborn variants: 2369, Number of pathogenic: 92\nNumber of mother variants: 2358, Number of pathogenic: 81\nNumber of father variants: 2200, Number of pathogenic: 135\n"
        ]
       }
      ],
@@ -372,16 +352,16 @@
       "fathers = nbs_annot[nbs_annot['member'] == 'F']\n",
       "\n",
       "# subset trio dataframes for only pathogenic variants\n",
-      "mom_patho = mothers.loc[mothers['pathogenic'] == True]\n",
-      "dad_patho = fathers.loc[fathers['pathogenic'] == True]\n",
-      "nb_patho = newborns.loc[newborns['pathogenic'] == True]\n",
+      "mom_patho = mothers.loc[mothers['clin_patho'] == 'Y']\n",
+      "dad_patho = fathers.loc[fathers['clin_patho'] == 'Y']\n",
+      "nb_patho = newborns.loc[newborns['clin_patho'] == 'Y']\n",
       "\n",
       "print \"Number of newborn variants: \" + str(len(newborns)) + \", Number of pathogenic: \" + str(len(nb_patho))\n",
       "print \"Number of mother variants: \" + str(len(mothers)) + \", Number of pathogenic: \" + str(len(mom_patho))\n",
       "print \"Number of father variants: \" + str(len(fathers)) + \", Number of pathogenic: \" + str(len(dad_patho))"
      ],
      "language": "python",
-     "prompt_number": 183
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -397,15 +377,7 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "118 dominant variants found.\n248 homozygous recessive variants found.\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "# disable erroneous pandas warning\n",
       "pd.options.mode.chained_assignment = None\n",
@@ -421,13 +393,6 @@
      ],
      "language": "python",
      "prompt_number": 175
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      ""
-     ]
     },
     {
      "cell_type": "heading",
