fix save feature. continue testing with DANN scores.

--- a/nbs_genes/nbs_genes.ipynb
+++ b/nbs_genes/nbs_genes.ipynb
@@ -224,7 +224,7 @@
       "nbs_df = as_pandas(cur)"
      ],
      "language": "python",
-     "prompt_number": 96
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -251,7 +251,10 @@
       "import os\n",
       "\n",
       "# enter path to snpEff.jar on your computer\n",
-      "snpeff_path = 'D:/Documents/tools/snpEff/snpEff.jar'\n",
+      "# windows\n",
+      "#snpeff_path = 'D:/Documents/tools/snpEff/snpEff.jar'\n",
+      "# mac\n",
+      "snpeff_path = '/Users/summerrae/tools/snpEff/snpEff.jar'\n",
       "\n",
       "# enter basename for output files\n",
       "out_name = 'nbs_genes'\n",
@@ -284,7 +287,7 @@
       "    print str(e)"
      ],
      "language": "python",
-     "prompt_number": 97
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -293,10 +296,12 @@
       "The functional annotations were read back into Python, parsed and matched with the each respective variant data frame. \n",
       "\n",
       "Annotated variants were then labled as pathogenic if they predicted a newborn to have an NBS conddition based on the following parameters:   \n",
+      "\n",
       "- Presence of mutation(s) with appropriate inheritance (eg, 2 bi-allelic pathogenic mutations for a recessive disorder).  \n",
       "- Mutations are defined strictly as either:   \n",
-      "    - Annotated in ClinVar with a clinical significance of 4 or 5, but never 2 or 3 or labeled pathogenic in HGMD (to be added later) OR\n",
-      "    - Novel but predicted to be disease-causing (ie, a stop-gain, stop-loss, splice-site, whole-exon or larger deletion, or frameshift) \n",
+      "        - Annotated in ClinVar with a clinical significance of 4 or 5, but never 2 or 3 or labeled pathogenic in HGMD (to be added later) OR  \n",
+      "        - Novel but predicted to be disease-causing (ie, a stop-gain, stop-loss, splice-site, whole-exon or larger deletion, or frameshift)  OR  \n",
+      "        - Have DANN scores higher than 0.89\n",
       "\n",
       "This output will be used downstream to output a list of high priority variants for examination. "
      ]
@@ -335,10 +340,11 @@
       "nbs_annot = parse_snpeff(nbs_df)\n",
       "\n",
       "# label variants considered pathogenic \n",
-      "nbs_annot['pathogenic'] = (nbs_annot['impact'] == 'HIGH') |  (nbs_annot['clin_patho'] == 'Y')"
+      "nbs_annot['pathogenic'] = (nbs_annot['impact'] == 'HIGH') | (nbs_annot['clin_patho'] == 'Y' )| (nbs_annot['dann_score'] > 0.99)\n",
+      "#nbs_annot['pathogenic'] = (nbs_annot['impact'] == 'HIGH') | (nbs_annot['clin_patho'] == 'Y' )"
      ],
      "language": "python",
-     "prompt_number": 98
+     "prompt_number": 56
     },
     {
      "cell_type": "markdown",
@@ -371,7 +377,7 @@
       "print \"Number of father variants: \" + str(len(fathers))"
      ],
      "language": "python",
-     "prompt_number": 99
+     "prompt_number": 58
     },
     {
      "cell_type": "markdown",
@@ -400,7 +406,7 @@
       "nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1'))]"
      ],
      "language": "python",
-     "prompt_number": 163
+     "prompt_number": 59
     },
     {
      "cell_type": "heading",
@@ -456,7 +462,7 @@
       "    print \"No compound het variants\""
      ],
      "language": "python",
-     "prompt_number": 164
+     "prompt_number": 60
     },
     {
      "cell_type": "markdown",
@@ -480,7 +486,7 @@
       "    print \"No compound het variants found.\""
      ],
      "language": "python",
-     "prompt_number": 165
+     "prompt_number": 61
     },
     {
      "cell_type": "markdown",
@@ -524,7 +530,7 @@
       "    comphet_df.name = 'comp_het'"
      ],
      "language": "python",
-     "prompt_number": 181
+     "prompt_number": 62
     },
     {
      "cell_type": "heading",
@@ -570,10 +576,11 @@
       "    patho_comphet = []\n",
       "    # search within each gene and family:\n",
       "    for name, group in patho_by_gene:\n",
-      "        # find genes with pathogenic nb variants at more than one position\n",
-      "        if comphet_df[(comphet_df['pathogenic'] == True) & (comphet_df['member'] == 'NB')].pos.nunique() > 1:\n",
-      "            group.append(patho_comphet)\n",
-      "            # combine results into datafrae\n",
+      "        # if there are pathogenic genes at more than one position\n",
+      "        if (group[(group['pathogenic'] == True)].pos.nunique() > 1):\n",
+      "            # append to patho_comphet\n",
+      "            patho_comphet.append(group)\n",
+      "            # transform results into dataframe and name it\n",
       "            patho_comphet_df = pd.concat(patho_comphet)\n",
       "            patho_comphet_df.name = 'comp_het'\n",
       "        else:\n",
@@ -584,7 +591,7 @@
       "    patho_comphet_df.name = 'comp_het'"
      ],
      "language": "python",
-     "prompt_number": 191
+     "prompt_number": 63
     },
     {
      "cell_type": "heading",
@@ -598,12 +605,23 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
+     "outputs": [],
+     "input": [
+      "print nb_dom_patho['dann_score']"
+     ],
+     "language": "python",
+     "prompt_number": 66
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
      "outputs": [
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Variants found:\n124 dominant variants found.\n293 hom_recessive variants found.\n529 comp_het variants found.\n\n\nOf those variants, the following were predicted to cause NBS disorders:\nNo dominant variants found.\nNo hom_rec variants found.\nNo comp_het variants found.\n"
+        "Variants found:\n124 dominant variants found.\n293 hom_recessive variants found.\n529 comp_het variants found.\n\n\nOf those variants, the following were predicted to cause NBS disorders:\n115 dominant variants found.\n216 hom_rec variants found.\n507 comp_het variants found.\n\ndominant:  \n\nImpact: \nMODIFIER    48\nMODERATE    35\nLOW         32\ndtype: int64 \n\nEffect: \n3_prime_UTR_variant                               43\nmissense_variant                                  35\nsynonymous_variant                                31\ndownstream_gene_variant                            2\n5_prime_UTR_variant                                2\n5_prime_UTR_premature_start_codon_gain_variant     1\nupstream_gene_variant                              1\ndtype: int64 \n\nCondition: \nHypothyroidism: congenital: nongoitrous 2                       42\nChoreoathetosis: hypothyroidism: and neonatal respiratory distress    36\nPallister-Hall syndrome 2                                       33\nHypothyroidism: congenital nongoitrous: 5                        4\ndtype: int64 \n\nAffected gene(s): \n['PAX8' 'GLI2' 'NKX2-1' 'NKX2-5'] \n\n\nhom_rec:  \n\nImpact: \nMODIFIER    95\nLOW         66\nMODERATE    55\ndtype: int64 \n\nEffect: \nmissense_variant           55\n3_prime_UTR_variant        44\nTF_binding_site_variant    36\nsynonymous_variant         19\ndownstream_gene_variant    15\n5_prime_UTR_variant        15\nintron_variant             13\nsequence_feature            9\nupstream_gene_variant       6\nnon_coding_exon_variant     2\nsplice_region_variant       2\ndtype: int64 \n\nCondition: \nAcyl-CoA dehydrogenase: very long chain: deficiency of          36\n  Mucopolysaccharidosis: type Ih (Hurler syndrome)              33\nAcyl-CoA dehydrogenase: medium chain: deficiency of             15\nSevere combined immunodeficiency                                14\nMethylmalonic acidemia: cblG type                               12\nPhenylketonuria: Hyperphenylalaninemia: non-PKU mild            10\nHyperprolinemia: type I                                         10\nMitochondrial DNA depletion syndrome 9 (encephalomyopathic type with methylmalonic aciduria)     9\nCombined malonic and methylmalonic aciduria                      8\nHypothyroidism: congenital: nongoitrous: 1                       6\nMaple syrup urine disease: type II                               5\nCystinosis (multiple types)                                      5\nAlpha-methylacetoacetic aciduria                                 5\nTranscobalamin II deficiency                                     4\nMultiple acyl-CoA dehydrogenase deficiency: Glutaric aciduria IIA     4\nMucopolysaccharidosis: type VII (Sly syndrome)                   4\nGalactosemia                                                     4\nBamforth-Lazarus syndrome                                        4\nThyroid dyshormonogenesis 3                                      4\nDiabetes mellitus: neonatal: with congenital hypothyroidism      3\nKrabbe disease                                                   3\nImmunodeficiency due to purine nucleoside phosphorylase deficiency     3\nEthylmalonic encephalopathy                                      2\nMethylmalonic acidemia: cblB type                                2\n3-beta-hydroxysteroid dehydrogenase: type II: deficiency         2\nNiemann-Pick disease: type C1: Niemann-Pick disease: type D      2\nHomocystinuria                                                   2\nT cell-negative: B cell-negative: natural killer cell-positive severe combined immunodeficiency: Omenn syndrome: Alpha/beta T-cell lymphopenia with gamma/delta T-cell expansion: severe cytomegalovirus infection: and autoimmunity: Combined cellular and humoral immune defects with granulomas     1\nGlycine encephalopathy                                           1\nGalactose epimerase deficiency                                   1\nMucopolysaccharidosis: type VI (Maroteaux-Lamy syndrome)         1\nSevere combined immunodeficiency due to adenosine deaminase deficiency     1\ndtype: int64 \n\nAffected gene(s): \n['PRODH' 'ACSF3' 'DBT' 'MTR' 'PNP' 'TCN2' 'FOXE1' 'MMAB' 'GALC' 'ADA'\n 'ACADM' 'TG' 'HSD3B2' 'ACAT1' 'MTHFR' 'ETHE1' 'ACADVL' 'MTHFD1' 'GUSB'\n 'GALE' 'PAH' 'TSHR' 'GLIS3' 'RAG1' 'GLDC' 'CTNS' 'GALT' 'ETFA' 'ARSB'\n 'SUCLG1' 'IDUA' 'NPC1'] \n\n\ncomp_het:  \n\nImpact: \nMODERATE    191\nMODIFIER    178\nLOW         138\ndtype: int64 \n\nEffect: \nmissense_variant                            191\n3_prime_UTR_variant                          94\nsynonymous_variant                           72\nsequence_feature                             54\n5_prime_UTR_variant                          50\ndownstream_gene_variant                      16\nsplice_region_variant&synonymous_variant     10\nupstream_gene_variant                        10\nintron_variant                                7\nsplice_region_variant                         2\nnon_coding_exon_variant                       1\ndtype: int64 \n\nCondition: \n  Mucopolysaccharidosis: type Ih (Hurler syndrome)              46\nMultiple acyl-CoA dehydrogenase deficiency: Glutaric aciduria IIB    38\nCombined malonic and methylmalonic aciduria                     34\nHyperprolinemia: type I                                         34\nGlycine encephalopathy                                          29\nIsobutyryl-CoA dehydrogenase deficiency                         23\nTyrosinemia: type I                                             21\nAlpha-1-antitrypsin deficiency                                  19\nMethylmalonic acidemia: cblG type                               19\nOmenn syndrome: Severe combined immunodeficiency with sensitivity to ionizing radiation    18\nAcyl-CoA dehydrogenase: short-chain: deficiency of              17\nProlidase deficiency                                            17\nAdrenal hyperplasia: congenital: due to 21-hydroxylase deficiency: Hyperandrogenism: nonclassic type: due to 21-hydroxylase deficiency    16\nHistidinemia                                                    15\nCystic fibrosis                                                 14\nMaple syrup urine disease: mild variant                         13\nHolocarboxylase synthetase deficiency                           11\nSevere combined immunodeficiency                                11\nHomocystinuria due to cystathionine beta-synthase deficiency    10\nCarbamoylphosphate synthetase I deficiency                      10\nTranscobalamin II deficiency                                     9\nMaple syrup urine disease: type II                               9\nAcyl-CoA dehydrogenase family: member 9: deficiency of           9\nPhenylketonuria: Hyperphenylalaninemia: non-PKU mild             8\nMucopolysaccharidosis: type VII (Sly syndrome)                   7\nNiemann-Pick disease: type C1: Niemann-Pick disease: type D      7\nCystinosis (multiple types)                                      7\nHomocystinuria-megaloblastic anemia: cobalamin E type            6\nBamforth-Lazarus syndrome                                        5\nDiabetes mellitus: neonatal: with congenital hypothyroidism      5\nThyroid dyshormonogenesis 4                                      5\nGalactose epimerase deficiency                                   5\nPropionic acidemia                                               4\n2-methylbutyryl-CoA dehydrogenase deficiency                     2\nAlpha-methylacetoacetic aciduria                                 2\nLipoid adrenal hyperplasi                                        2\ndtype: int64 \n\nAffected gene(s): \n['ACAD8' 'ACAD9' 'ACADS' 'ACADSB' 'ACAT1' 'ACSF3' 'AMT' 'CBS' 'CFTR' 'CPS1'\n 'CTNS' 'CYP21A2' 'DBT' 'DCLRE1C' 'ETFB' 'FAH' 'FOXE1' 'GALE' 'GLIS3'\n 'GUSB' 'HAL' 'HLCS' 'IDUA' 'IYD' 'MTHFD1' 'MTR' 'MTRR' 'NPC1' 'PAH' 'PCCB'\n 'PEPD' 'PPM1K' 'PRODH' 'SERPINA1' 'STAR' 'TCN2'] \n\n"
        ]
       }
      ],
@@ -643,7 +661,7 @@
       "summarize(patho_comphet_df)"
      ],
      "language": "python",
-     "prompt_number": 194
+     "prompt_number": 64
     },
     {
      "cell_type": "heading",
@@ -712,6 +730,35 @@
      ],
      "language": "python",
      "prompt_number": 198
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "115\n"
+       ]
+      }
+     ],
+     "input": [
+      "print len(nb_dom_patho)"
+     ],
+     "language": "python",
+     "prompt_number": 73
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
    ]
   }
